force-app/main/default/objects/SKP_Integration_Details__c/SKP_Integration_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SKP Integration Details</label>
</CustomObject>