force-app/main/default/objects/SKP_Integration_Details__c/fields/Copy_Contract_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Copy_Contract_Endpoint__c</fullName>
    <label>Copy Contract Endpoint</label>
    <length>128</length>
    <type>Text</type>
</CustomField>