force-app/main/default/objects/SKP_Integration_Details__c/fields/Copy_Customer_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Copy_Customer_Endpoint__c</fullName>
    <label>Copy Customer Endpoint</label>
    <length>128</length>
    <type>Text</type>
</CustomField>