force-app/main/default/objects/SKP_Integration_Details__c/fields/Create_Recurring_Charges__c.field-meta.xml
<CustomField>
    <fullName>Create_Recurring_Charges__c</fullName>
    <label>Create Recurring Charges</label>
    <length>128</length>
    <type>Text</type>
</CustomField>