force-app/main/default/objects/SKP_Integration_Details__c/fields/Customer_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Customer_Endpoint__c</fullName>
    <label>Customer Endpoint</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>