force-app/main/default/objects/SKP_Integration_Details__c/fields/Get_Contract_Info__c.field-meta.xml
<CustomField>
    <fullName>Get_Contract_Info__c</fullName>
    <label>Get Contract Info</label>
    <length>128</length>
    <type>Text</type>
</CustomField>