force-app/main/default/objects/SKP_Integration_Details__c/fields/Get_Recurring_Charges__c.field-meta.xml
<CustomField>
    <fullName>Get_Recurring_Charges__c</fullName>
    <label>Get Recurring Charges</label>
    <length>128</length>
    <type>Text</type>
</CustomField>