force-app/main/default/objects/SKP_Integration_Details__c/fields/OAuth_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>OAuth_EndPoint__c</fullName>
    <label>OAuth EndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>