force-app/main/default/objects/SKP_Integration_Details__c/fields/Update_Contract_Info__c.field-meta.xml
<CustomField>
    <fullName>Update_Contract_Info__c</fullName>
    <label>Update Contract Info</label>
    <length>128</length>
    <type>Text</type>
</CustomField>