force-app/main/default/objects/SKP_Integration_Details__c/fields/Update_Recurring_Charges__c.field-meta.xml
<CustomField>
    <fullName>Update_Recurring_Charges__c</fullName>
    <label>Update Recurring Charges</label>
    <length>128</length>
    <type>Text</type>
</CustomField>